[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minirag-hku"
version = "0.0.2"
authors = [
    {name = "Tianyu Fan"},
]
description = "MiniRAG: Towards Extremely Simple Retrieval-Augmented Generation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "accelerate",
    "aiofiles",
    "aiohttp",
    "configparser",
    "graspologic",
    "json_repair",
    "httpx",
    "nano-vectordb",
    "networkx",
    "nltk",
    "numpy",
    "openai",
    "pipmaster",
    "pydantic",
    "PyPDF2",
    "python-docx",
    "python-dotenv",
    "python-pptx",
    "rouge",
    "sentence-transformers",
    "setuptools",
    "scikit-learn",
    "tenacity",
    "tiktoken",
    "tqdm",
    "transformers",
    "xxhash",
]

[project.optional-dependencies]
api = [
    "ascii_colors",
    "fastapi",
    "nest_asyncio",
    "python-multipart",
    "torch",
    "uvicorn",
]

[project.scripts]
minirag-server = "minirag.api.minirag_server:main"

[project.urls]
Homepage = "https://github.com/HKUDS/MiniRAG"
Repository = "https://github.com/HKUDS/MiniRAG"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
ignore = ["E402"]
